# DiagMC_BEC_Polaron

./: Adaption.cpp  CMakeLists.txt  DiagMC.h  DiagMCException.h  DiagMC_config.cpp  DiagMC_estimator.cpp  DiagMC_io.cpp  DiagMC_measure.cpp  DiagMC_run.cpp  DiagMC_secumul.cpp  DiagMC_test.cpp  DiagMC_updates.cpp  Diagram.cpp  Diagram.h  DiagramException.h  Diagram_test.cpp  dvector.cpp  dvector.h  makefile  mystructs.cpp  mystructs.h  tau_map.cpp  tau_map.h  tmap.cpp  tmap.h  tmap_test.cpp
Execution/: 1st_Ep.m  1st_G0SE.m  1st_G0SEG0.m  1st_G0SEiw.m  1st_SE.m  2nd_G0SE_Complete.m  2nd_G0SE_Crossed.m  2nd_G0SE_Rainbow.m  2nd_G_Crossed.m  2nd_G_Reducible.m  2nd_SE.m  BEC_data_ana.py  BEC_g0SEg0_Transform.m  DiagMC_BEC.json  DiagMC_BEC_BEC.json  DiagMC_BEC_FP.json  FP_data_ana.py  FP_g0SE_Transform.m  FP_g0SEg0_Transform.m  Prokov_Vgl.py  data_ana.py  data_ana_fig4.py  spe_ana.py  submitjob.py  submitjob_fig4.py  submitjob_fig5.py
Mathematica/: EqPar.nb  params.mx  tmap.nb
Mathematica/BEC/: 1st_G0SEG0tau.nb  1st_SE_diff_smallt.nb  1st_SEomega.nb  1st_SEonly.nb  2nd_G0SE.mx  2nd_G0SE.nb  2nd_SEimagomega.nb  2nd_SEomega.nb  2nd_SEonly.nb  2nd_SEw.mx  BEC_1st_G0SEG0.m  BEC_1st_SEomega.m  BEC_1st_seonly.mx  BEC_2nd_Rainbow.m  BEC_Insert_Update.nb  BEC_MF.nb  G0SEG0.mx  SE_Transform.m  g0SE_Transform.m  mat_2nd_g0se  mat_2nd_seexpmutau  mat_2nd_seonly  mat_2nd_sesmall  mat_2nd_sew  mat_fo_g0seg0  mat_fo_sew
Mathematica/FP/: FP_1st_SEomega.m  FP_1st_SEomega_Grusdt.m  FP_1st_SEomega_trans_G.nb  FP_1st_SEonly.nb  FP_1st_seexpmut.mx  FP_2nd_seexpmut.mx  FP_fo_g0se_to_g0seg0.nb  FP_transform_g0se_to_peter.nb  FP_transform_g0seg0_to_peter.nb  mat_FP_1st_seexpmut_w2  mat_FP_2nd_seexpmut_w2  mat_FP_g1
Mathematica/random/: Jan.nb
python/: Ep_ana.py  Interpolation.py  Trafos.py  subjob.py
python/BEC/: E_renorm.py  E_renorm.py~  MaxOrdAna.py  Vliecomp.py  ana_Grusdt.py  ana_all.py  ana_all.py~  ana_mto_2_all_small_q.py  fig4.py  fig4.py~  fig4distr.py  fig4distr.py~  fig5.py  fwzero.py
python/FP/: FP_data_ana_1.py  FP_vgl.py  test.py
src/: Adaption.h  CMakeLists.txt  DiagMC.cpp  DiagMC.h  DiagMCException.h  DiagMC_config.cpp  DiagMC_estimator.cpp  DiagMC_io.cpp  DiagMC_run.cpp  DiagMC_secumul.cpp  DiagMC_test.cpp  DiagMC_updates.cpp  Diagram.cpp  Diagram.h  Diagram_test.cpp  NeighborTable.cpp  NeighborTable.h  RunException.h  dvector.cpp  dvector.h  makefile  myexceptions.cpp  myexceptions.h  mystructs.cpp  mystructs.h  src.kdev4  tau_map.cpp  tmap.cpp  tmap_test.cpp
src/.kdev4/: 3.1.kdev4  src.kdev4
